--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-nova-transferencia></app-nova-transferencia>
+<app-nova-transferencia
+  (aoTranferir)="transferir($event)"
+  (valoresComErro)="exibirModalErro($event)">
+</app-nova-transferencia>
+
+<app-extrato [transferencias]="transferencias" ></app-extrato>
+
+
