--- a/src/app/extrato/extrato.component.html
+++ b/src/app/extrato/extrato.component.html
@@ -1,5 +1,15 @@
-<div *ngFor="let transferencia of transferencias">
-  <p>Data: {{transferencia?.data}}</p>
-  <p>Valor: {{transferencia?.valor}}</p>
-  <p>Destino: {{transferencia?.destino}}</p>
-</div>
+<table class="tabela">
+  <thead class="cabecalho">
+    <th class="cabecalho-conteudo">Data</th>
+    <th class="cabecalho-conteudo">Valor</th>
+    <th class="cabecalho-conteudo">Destino</th>
+  </thead>
+  <tbody>
+    <tr class="linha" *ngFor="let transferencia of transferencias">
+      <td class="conteudo">{{transferencia?.data | date: "shortDate"}}</td>
+      <td class="conteudo">{{transferencia?.valor | currency}}</td>
+      <td class="conteudo">{{transferencia?.destino}}</td>
+    </tr>
+  </tbody>
+</table>
+
